<resources>
    <string name="app_name">Foodster</string>
    <!--<string name="title_activity_principal">Principal</string>

    <string name="search">Search</string>

    <string name="resume">Analizar</string>
    <string name="pause">Pausar</string>
    <string name="title_activity_mapa">Map</string>-->

    <string name="text_carga">Cargando…</string>

    <string name="text_completar_campos">Complete los campos, por favor</string>

    Presione de nuevo para salir


    <string name="text_mis_direcciones">Mis direcciones</string>

    <string name="text_siguiente">Siguiente</string>
    <string name="text_aplicar">Aplicar</string>
    <string name="text_confirmar">Confirmar</string>
    <string name="text_aceptar">Aceptar</string>
    <string name="text_cancelar">Cancelar</string>
    <string name="text_detalles">Detalles</string>


    //Login
    <string name="edit_usuario">Usuario o Email</string>
    <string name="text_password">Contraseña</string>

    <string name="check_recordar">Recordar cuenta</string>
    <string name="check_session">No cerrar sesión</string>

    <string name="button_iniciar">Iniciar sesión</string>

    <string name="text_pregunta_cuenta">¿No tienes una cuenta?</string>
    <string name="button_registro">Registrate aquí</string>

    <string name="text_pass_erronea">Contraseña erronea</string>
    <string name="text_usuario_erroneo">Usuario o email no registrado</string>

    <string name="text_pulsar_salir">Presione de nuevo para salir</string>


    //Navigator_principal

    <string name="text_empresas">Empresas</string>
    <string name="text_eventos">Eventos</string>
    <string name="text_mapa">Mapa</string>
    <string name="text_carrito">Carrito</string>
    <string name="text_cuenta">Cuenta</string>

    //Fragment Empresas
    <string name="text_buscar">Buscar...</string>
    <string name="text_horarios">Horarios</string>
    <string name="mensaje_agregar_carrito">Producto agregado al carrito</string>

    <string name="mensaje_agregar_favorito">Agregado a favoritos</string>

    //Fragment Empresas
    <string name="text_filtrar">Filtrar</string>
    <string name="text_categorias">Categorias</string>


    <string name="eliminar_carrito">¿Eliminar el producto del carrito?</string>

    <string name="text_eliminando">Eliminando...</string>

    //Fragment Cuenta
    <string name="text_perfil">Perfil</string>
    <string name="text_notificaciones">Notificaciones</string>
    <string name="text_favoritos">Favoritos</string>
    <string name="text_cerrar_sesion">Cerrar sesión</string>

    //Fragment Cuenta
    <string name="text_total_pago">Total a pagar:</string>
    <string name="text_realizar_pedido">Realizar pedido</string>
    <string name="text_metodo_pago">Método de pago</string>

    <string name="text_efectivo">Efectivo</string>
    <string name="text_tarjeta">Tarjeta</string>
    <string name="text_efectivo_pago">¿Con cuanto desea pagar?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_notificaciones">Notificaciones</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


</resources>
